fix size of menu and overflow of toolbar shadow

--- a/app/src/app/triangular/scss/layouts/states/_triangular.scss
+++ b/app/src/app/triangular/scss/layouts/states/_triangular.scss
@@ -1,5 +1,6 @@
 .triangular-non-scrolling {
   position: relative;
+  z-index: 0;
   & > * {
     position: absolute;
     width: 100%;
